added related articles

--- a/language/en-GB/en-GB.mod_j5_swiper.ini
+++ b/language/en-GB/en-GB.mod_j5_swiper.ini
@@ -81,9 +81,22 @@ MOD_J5_SWIPER_CONTENTTYPE="Slider Content Type"
 
 MOD_J5_SWIPER_CONTENTTYPE_DESC="Type of content that will be used for slider"
 
-MOD_J5_SWIPER_CONTENTTYPE_ARTICLES="Use Popular Articles "
+MOD_J5_SWIPER_ARTICLECONTENTTYPE="Article type"
+
+MOD_J5_SWIPER_ARTICLECONTENTTYPE_RELATED_ARTICLES = "Related Articles"
+MOD_J5_SWIPER_ARTICLECONTENTTYPE_POPULAR_ARTICLES = "Popular Articles"
+MOD_J5_SWIPER_CONTENTTYPE_DESC="Type of article filtering"
+
+
+MOD_J5_SWIPER_CONTENTTYPE_ARTICLES="Use Articles"
+
 
 
 MOD_J5_SWIPER_CONTENTTYPE_CUSTOM = "Use Custom Content"
 
 MOD_J5_SWIPER_CONTENTTYPE_TESTIMONIALS = "Use Testimonials Content"
+
+MOD_J5_SWIPER_SLIDE_PER_GROUP = "Slides per slide"
+
+MOD_J5_SWIPER_SLIDE_PER_GROUP_DESC = "How much slides would be sliding"
+MOD_J5_SWIPER_SLIDE_PER_GROUP_VALUE = "Same as in view"
