Final JED fixes

--- a/language/en-GB/mod_swiper_slider.ini
+++ b/language/en-GB/mod_swiper_slider.ini
@@ -1,5 +1,5 @@
 
-MOD_SWIPER_SLIDER="Swiper Slider"
+MOD_SWIPER_SLIDER="Swiper JSlider"
 MOD_SWIPER_SLIDER_DESC="A flexible and customizable slider module for Joomla powered by Swiper.js"
 
 
@@ -61,10 +61,7 @@ MOD_SWIPER_SLIDER_EFFECT_FADE="Fade"
 MOD_SWIPER_SLIDER_EFFECT_CUBE="Cube"
 MOD_SWIPER_SLIDER_EFFECT_COVERFLOW="Coverflow"
 MOD_SWIPER_SLIDER_EFFECT_FLIP="Flip"
-MOD_SWIPER_SLIDER_DIRECTION="Direction"
-MOD_SWIPER_SLIDER_DIRECTION_DESC="Choose the direction of the slider."
-MOD_SWIPER_SLIDER_DIRECTION_VERTICAL="Vertical"
-MOD_SWIPER_SLIDER_DIRECTION_HORIZONTAL="Horizontal"
+
 MOD_SWIPER_SLIDER_NAVIGATION="Navigation"
 MOD_SWIPER_SLIDER_NAVIGATION_DESC="Enable or disable navigation arrows."
 MOD_SWIPER_SLIDER_PAGINATION="Pagination"
@@ -84,7 +81,7 @@ MOD_SWIPER_SLIDER_ARTICLECONTENTTYPE="Article type"
 
 MOD_SWIPER_SLIDER_ARTICLECONTENTTYPE_RELATED_ARTICLES = "Related Articles"
 MOD_SWIPER_SLIDER_ARTICLECONTENTTYPE_POPULAR_ARTICLES = "Popular Articles"
-MOD_SWIPER_SLIDER_CONTENTTYPE_DESC="Type of article filtering"
+
 
 
 MOD_SWIPER_SLIDER_CONTENTTYPE_ARTICLES="Use Articles"
