--- a/language/en-GB/mod_swiper_slider.sys.ini
+++ b/language/en-GB/mod_swiper_slider.sys.ini
@@ -1,3 +1,3 @@
-MOD_SWIPER_SLIDER="Swiper Slider"
+MOD_SWIPER_SLIDER="Swiper JSlider"
 
 MOD_SWIPER_SLIDER_DESC="A flexible and customizable slider module for Joomla powered by Swiper.js"
